[tool.poetry]
name = "epikrawler"
version = "0.1.0"
description = "Top-down dungeon crawler roguelike game"
authors = ["Don Robert Pornaras <donrobert.pornaras@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
